@@ -1,3 +1,7 @@
+n/a - May 19, 2004
+
+	* Added the random bootscript from blfs-bootscripts
+
 n/a - May 18, 2004
 
 	* Fixed installation of modules configuration
